新增笔记ts，修正笔记数学

--- a/pages/M01线性代数.md
+++ b/pages/M01线性代数.md
@@ -1,6 +1,6 @@
 <h1 align="center">线性代数</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2023-08-10</div>
 
 ## 行列式
 
@@ -210,7 +210,13 @@
 | 不支持**幂分配结合**  | $A^nB^n≠(AB)^n、(AB)^n≠A^nB^n$        |
 | 支持限制**平方和公式** | $(A+B)^2＝A^2＋AB＋BA＋B^2，≠A^2＋2AB＋B^2$ |
 
-+ $应用例题：(AB)^{100}＝ABAB...AB＝A(BA)^{99}B$
++ $(AB)^{100}＝ABAB...AB＝A(BA)^{99}B$
+
++ 对角方阵幂运算，直接对角线上的元素求幂。
+
++ 求$A^{100}$，对角化求$P^{-1}AP=\wedge$，则$A^{100}=P\wedge^{100}P^{-1}$
+  
+  证明：左边展开得$P^{-1}APP^{-1}AP...P^{-1}AP=P^{-1}A^{100}P=\wedge^{100}$
 
 ---
 
@@ -397,40 +403,40 @@
 
 <br>
 
-| 性质                                                  |
-|:--------------------------------------------------- |
-| 一个特征值对应多个特征向量，一个特征向量对应一个特征值                         |
-| 若$\alpha$是特征值λ的特征向量，那么$k\alpha$也是特征值λ的特征向量          |
-| 若$\alpha$、β是特征值λ的特征向量，那么$k\alpha+k\beta$也是特征值λ的特征向量 |
-| 三角形方阵的特征值直接取所有主对角线元素                                |
-| 零方阵的特征值为0，特征向量为所有单位向量                               |
-| 单位阵的特征值为1，特征向量为所有单位向量                               |
-| 方阵$A$和$A^T$有相同的特征值，但特征向量不一定相同                       |
-| 方阵$A$的每行且每列元素绝对值之和都＜1，那么方阵A的$\vert \lambda\vert＜1$  |
-| $方阵A所有特征值的和=A主对角线的和=矩阵的迹tr(A)$                      |
-| $方阵A所有特征值的乘积=\vert A\vert$                          |
-| 方阵$A$可逆<=>$A$的特征值无0                                 |
-| 方阵$A$由各互异的特征值对应的1个特征向量，组合的向量组线性无关                   |
-| 方阵$A$由各互异的特征值对应的多个无关特征向量，组合的向量组线性无关                 |
-| $k$重特征值（$k$个特征值一样）对应的线性无关的特征向量的个数$≤k$               |
-| 方阵$A$的特质值$\lambda$共有阶数个                             |
-| 若$\lambda$是方阵$A$的特征值，那么$k\lambda$也是$kA$的特征值         |
-| 若$\lambda$是方阵$A$的特征值，那么$\lambda^k$也是$A^k$的特征值       |
-| 若$\lambda$是方阵$A$的特征值，那么$\lambda+k$也是$A+kE$的特征值      |
-| 若$\lambda$是方阵$A$的特征值，那么$\lambda^{-1}$也是$A^{-1}$的特征值 |
-| 若$\vert a＋bA\vert＝0$，则$\lambda＝-a/b$                |
+| 性质                                                   |
+|:---------------------------------------------------- |
+| 一个特征值对应多个特征向量，一个特征向量对应一个特征值                          |
+| 若$\alpha$是特征值λ的特征向量，那么$k\alpha$也是特征值λ的特征向量           |
+| 若$\alpha$、β是特征值λ的特征向量，那么$k\alpha+k\beta$也是特征值λ的特征向量  |
+| 三角形方阵的特征值直接取所有主对角线元素                                 |
+| 零方阵的特征值为0，特征向量为所有单位向量                                |
+| 单位阵的特征值为1，特征向量为所有单位向量                                |
+| 方阵$A$和$A^T$有相同的特征值，但特征向量不一定相同                        |
+| 方阵$A$的每行且每列元素绝对值之和都＜1，那么方阵$A$的$\vert \lambda\vert＜1$ |
+| $方阵A所有特征值的和=A主对角线的和=矩阵的迹tr(A)$                       |
+| $方阵A所有特征值的乘积=\vert A\vert$                           |
+| 方阵$A$可逆<=>$A$的特征值无0                                  |
+| 方阵$A$由各互异的特征值对应的1个特征向量，组合的向量组线性无关                    |
+| 方阵$A$由各互异的特征值对应的多个无关特征向量，组合的向量组线性无关                  |
+| $k$重特征值（$k$个特征值一样）对应的线性无关的特征向量的个数$≤k$                |
+| 方阵$A$的特质值$\lambda$共有阶数个                              |
+| 若$\lambda$是方阵$A$的特征值，那么$k\lambda$也是$kA$的特征值          |
+| 若$\lambda$是方阵$A$的特征值，那么$\lambda^k$也是$A^k$的特征值        |
+| 若$\lambda$是方阵$A$的特征值，那么$\lambda+k$也是$A+kE$的特征值       |
+| 若$\lambda$是方阵$A$的特征值，那么$\lambda^{-1}$也是$A^{-1}$的特征值  |
+| 若$\vert a＋bA\vert＝0$，则$\lambda＝-a/b$                 |
 
-#### 矩阵相似~~~~
+#### 矩阵相似
 
         **概念**：$A、B$为方阵，存在$n$阶可逆矩阵$P$，$P^{-1}AP＝B$，则$A$相似于$B$，记$A$~$B$
 
-| 性质                                                                        |
-|:-------------------------------------------------------------------------:|
-| 拥有反身性、对称性、连续性                                                             |
-| 若$A$~$B$，则$A$、$B$有相同的特征值，$\vert A\vert＝\vert B\vert$，$tr(A)＝tr(B)$，逆命题不成立 |
-| 若$A$~$B$，则$A、B$同时可逆、同时不可逆，若同时可逆，则$A^{-1}$~$B^{-1}$                        |
-| 若$A$~$B$，则$A^k$~$B^k$                                                     |
-| 若$A$~$\wedge$<＝>  A有$n$个线性无关的特征向量                                         |
+| 性质                                                                     |
+|:----------------------------------------------------------------------:|
+| 拥有反身性、对称性、连续性                                                          |
+| 若$A相似于B$，则$A、B$有相同特征值，$\vert A\vert＝\vert B\vert$，$tr(A)＝tr(B)$，逆命题不成立 |
+| 若$A相似于B$，则$A、B$同时可逆、同时不可逆，若同时可逆，则$A^{-1}相似于B^{-1}$                     |
+| 若$A相似于B$，则$A^k相似于B^k$                                                  |
+| 若$A相似于\wedge$<＝>  $A$有$n$个线性无关的特征向量                                    |
 
 ---
 
@@ -460,7 +466,7 @@
 
 1. $A$~$\wedge$（$P^{-1}AP=\wedge$）,特征值是所有$\wedge$对角线元素，特征向量是$P$所有列向量
 
-2. 还需要让$P$的所有列向量正交化、单位化，使得$P$为正交矩阵，注意$P$写对应$\wedge$
+2. 还需要让$P$的所有列向量正交化、单位化，使得$P$为正交矩阵，注意$P$在书写上要对应$\wedge$
 
         **证明**：
 
@@ -625,7 +631,7 @@ $$
 
 ---
 
-#### 齐次线性方程组解的结构
+### 齐次线性方程组解的结构
 
         **基础解系**：齐次方程组的解向量组成的极大线性无关组。
 
@@ -639,7 +645,7 @@ $$
 |:------------------:|:--------:|
 | 系数矩阵的秩、向量组的秩$r(A)$ | 受限未知量的个数 |
 | 系数矩阵列数$n$          | 未知量总数    |
-| 基础解系成员向量个数$n-r(A)$ | 自由未知量的个数 |
+| 组成基础解系向量个数$n-r(A)$ | 自由未知量的个数 |
 
 <br>
 
@@ -664,13 +670,13 @@ AB=A(\beta_1\quad\beta_2\quad...\quad\beta_n)\\
 =(A\beta_1\quad A\beta_2\quad...\quad A\beta_n)\\
 =(O\quad O\quad ...\quad O)=O\\
 得到A\beta_1=O，A\beta_2=O...A\beta_n=O\\
-矩阵B的秩=向量组\beta的秩≤基础解系成员向量个数\\
+矩阵B的秩=向量组\beta的秩≤组成基础解系向量个数\\
 r(B)≤n-r(A)
 $$
 
 ---
 
-#### 非齐次线性方程组解的结构
+### 非齐次线性方程组解的结构
 
         **导出组**：非齐次线性方程组对应的齐次线性方程组
 
@@ -685,6 +691,24 @@ $$
 $$
 β+C_1\alpha_1+C_2\alpha_2\quad...\\
 （C_1、C_2为常数，\alpha_1、\alpha_2为导出组基础解析的成员向量，\beta为特解）
+$$
+
+<br>
+
+**性质**：矩阵$AX=B$，已经矩阵$AB$，求矩阵$X$，则有
+
+$$
+B、X拆分为分块矩阵
+(\beta_1\quad\beta_2\quad...\quad\beta_n)、
+(x_1\quad x_2\quad ...\quad x_n)\\
+AX=A(x_1 \quad x_2 \quad ... \quad x_n)\\
+=(Ax_1 \quad Ax_2 \quad ... \quad Ax_n)\\
+=(\beta_1 \quad \beta_2 \quad ...\quad \beta_n)=B\\
+得到Ax_1=\beta_1，Ax_2=\beta_2...Ax_n=\beta_n\\
+分别求解上述非齐次线性方程组得向量x_1,x_2...x_n（各自含不同的系数）\\
+得到矩阵X=(x_1 \quad x_2 \quad ... \quad x_n)\\
+x_1,x_2...x_n必须同时无解、唯一解、无穷多解\\
+即各增广矩阵的秩相等，可同时进行初等行变换
 $$
 
 ---
