--- a/pages/M02微积分一.md
+++ b/pages/M02微积分一.md
@@ -1,6 +1,6 @@
 <h1 align="center">微积分一</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2023-08-12</div>
 
 ## 集合
 
@@ -187,7 +187,7 @@
 
 + 解释有两种方法：在$x→0$处的导数相等（洛必达法则）、泰勒展开
 
-+ **等价无穷小在求极限的时候可以互相替换**
++ **等价无穷小在求极限的时候可以互相替换，注意x可以是个函数。**
 
 ---
 
@@ -338,10 +338,11 @@ $$
 
 ## 微分
 
-        **概念**：$f(x)$在$x_0$领域有定义，$Δx≠0$，$Δx＋x_0∈x_0$领域，$x_0$微分为：
+        **概念**：$f(x)$在$x_0$领域有定义，$Δx≠0$，$Δx＋x_0∈x_0$领域，在$x_0$处有：
 
 $$
-\lim_{Δx→0}f(x_0+Δx)=f(x_0)+f'(x)Δx
+\lim_{Δx→0}f(x_0+Δx)=f(x_0)+f'(x)Δx\\
+x_0处的微分表示为：dx|_{x=x_0}=f'(x)Δx=f'(x)dx
 $$
 
         **关系**：$可微<=>可导->连续$
