--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -1,6 +1,6 @@
 <h1 align="center">微积分二</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2023-08-12</div>
 
 ## 多元函数
 
@@ -125,10 +125,11 @@ $$
 
 ## 全微分
 
-        **概念**：函数$Z＝f(x,y)$中，$x_0$，$y_0$领域有定义，$Δx≠0，Δx＋x_0∈x_0领域$，$Δy≠0，Δy＋y_0∈y_0领域$，那么在($x_0$,$y_0$)处的全微分为：
+        **概念**：函数$Z＝f(x,y)$中，$x_0$，$y_0$领域有定义，$Δx≠0，Δx＋x_0∈x_0领域$，$Δy≠0，Δy＋y_0∈y_0领域$，那么在($x_0$,$y_0$)处有：
 
 $$
-\lim_{Δx→0,Δy→0}f(x_0+Δx,y_0+Δy)=f(x_0,y_0)+Z_x'Δx+Z_y'Δy
+\lim_{Δx→0,Δy→0}f(x_0+Δx,y_0+Δy)=f(x_0,y_0)+Z_x'Δx+Z_y'Δy\\
+(x_0,y_0)处的微分表示为：dZ|_{(x_0,y_0)}=Z_x'Δx+Z_y'Δx=Z_x'dx+Z_y'dx
 $$
 
                 即要加上**全部微小变化×对应偏导**
@@ -158,9 +159,7 @@ $$
 
 ---
 
-### 二重积分计算
-
-#### 直接坐标系
+### 直接坐标系
 
         **X型积分**：
 
@@ -184,7 +183,7 @@ $$
 
 ---
 
-#### 极坐标系\换元法
+### 极坐标系\换元法
 
 | 极坐标      | 说明                    | 取值范围          |
 |:--------:|:---------------------:|:-------------:|
@@ -228,21 +227,23 @@ $$
 \iint_{0}^{2}f(r\cos\theta，r\sin\theta)rdr
 $$
 
++ 极坐标系只有**角度型积分**
+
 ---
 
 **例2——非原点圆**：$D$为：$(x-1)^2＋(y-2)^2＝4$，求$\iint_{D} f(x,y)dxdy$
 
 1. **换元**：$u=x-1，v=y-2$
 
-2. **雅可比行列式**：
+2. **雅可比行列式**：$x=u+1，y=v+2$
    
    $$
    J(x,y)=
 \left\vert
 \begin{array}{cccc} 
-\frac{\partial u}{\partial x}  &  \frac{\partial u}{\partial y}\\
+\frac{\partial x}{\partial u}  &  \frac{\partial x}{\partial v}\\
 \\
-\frac{\partial v}{\partial x}  &  \frac{\partial v}{\partial y}\\ 
+\frac{\partial y}{\partial u}  &  \frac{\partial y}{\partial v}\\ 
 \end{array}
 \right\vert=
 \left\vert
@@ -294,6 +295,64 @@ b\sin\theta  &  br\cos\theta\\
 
 ---
 
+## 积分关系定理
+
+**格林公式**：若函数$P，Q$在**闭平面区间**$D$上连续，且有一阶偏导，$L$为$D$的**边界曲线**并取正向，则有**曲线积分<=>二重积分**
+
+$$
+\oint_L Pdx+Qdy
+=\iint_D(\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y})dxdy\\
+若曲线积分与L无关，则\frac{\partial Q}{\partial x}=\frac{\partial P}{\partial y}
+$$
+
+**高斯公式**：若函数$P，Q，R$在**闭空间区间**$\Omega$上连续，且有一阶偏导，$D$为$\Omega$的**边界曲面**，则有**曲面积分<=>三重积分**
+
+$$
+\oiint_DPdxdy+Qdydz+Rdxdz=\iiint_\Omega
+\frac{\partial P}{\partial z}+
+\frac{\partial Q}{\partial x}+
+\frac{\partial R}{\partial y}
+$$
+
+**斯托克斯公式**：若函数$P，Q，R$在**闭平面区间**D上连续，且有一阶偏导，$L$为$D$的**边界曲线**，D的侧与L方向按右手法则，则有**曲线积分<=>曲面积分**
+
+$$
+\oint_L Pdx+Qdy+Rdz
+=\oiint_D(\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y})dxdy
++(\frac{\partial R}{\partial y}-\frac{\partial Q}{\partial z})dydz
++(\frac{\partial P}{\partial z}-\frac{\partial R}{\partial x})dzdx
+$$
+
+---
+
+**各积分的关系**
+
+<img src="./images/2023-08-11-15-21-image.webp" title="" alt="" data-align="inline">
+
+**各积分的转换**
+
+![](./images/2023-08-11-15-25-image.webp)
+
+---
+
+## 三重积分
+
+**X型**：有以下两种，具体用哪种，以最先积分的上下限表达式方便的为准。
+
+$$
+\int_{x下限}^{x上限}
+\int_{y=含x的下限}^{y=含x的上限}
+\int_{z=含x,y的下限}^{z=含x,y的上限}
+\\或\\
+\int_{x下限}^{x上限}
+\int_{z=含x的下限}^{z=含x的上限}
+\int_{y=含x,z的下限}^{y=含x,z的上限}
+$$
+
+**Y型和Z型**：同理
+
+---
+
 ## 总结归纳
 
 ### 主术语
@@ -342,7 +401,7 @@ b\sin\theta  &  br\cos\theta\\
 |:---------:|:--------------------------------------------------------------------------------------------:|
 | 比较判别法（夹逼） | 0≤通项≤收敛通项，通项收敛；<br>通项≥发散通项，通项发散。                                                             |
 | 比较判别法（除法） | $\lim_{n\to+\infty}\frac{通项}{收敛通项}=0$，通项收敛；$\lim_{n\to+\infty}\frac{通项}{发散通项}=+\infty$，通项发散。 |
-| 比值判别法     | $\lim_{n\to\infty}\frac{a_{n＋1}}{a_n}＝L$，$L>1$收敛，$L<1$发散，$L=1$无法判                            |
+| 比值判别法     | $\lim_{n\to\infty}\frac{a_{n＋1}}{a_n}＝L$，$L>1$发散，$L<1$收敛，$L=1$无法判                            |
 | 根值判别法     | $\lim_{n\to\infty}\sqrt[n]{a_n}＝P$，$P>1$发散，$P<1$收敛，$P=1$无法判                                  |
 
 ---
@@ -391,6 +450,7 @@ $$
 | S(x)在x的收敛域内是连续的          |
 | 幂级数通项求导后，收敛域不变，端点需要重新判断  |
 | 幂级数通项求积分后，收敛域不变，端点需要重新判断 |
+| 幂级数求和凑等比为$x、-x$          |
 
 ---
 
@@ -419,7 +479,7 @@ a_n=0\\
 b_n=\frac2l\int_{0}^lf(x)\sin\frac{n\pi x}ldx（n=1,2,3...）
 $$
 
-傅里叶级数求和，为狄利克雷收敛定理：
+**傅里叶级数求和**，为**狄利克雷收敛**定理：
 
 1. 连续处：$S(n)=f(n)$
 
@@ -454,7 +514,7 @@ $$
 | 分类                            | 说明                                                                                                                  |
 |:-----------------------------:|:-------------------------------------------------------------------------------------------------------------------:|
 | 可分离$y^{(n)}$的                 | 直接多次求不定积分得$y$                                                                                                       |
-| 二阶线性常系数（齐次）<br>$y''＋py'＋qy＝0$ | **构造特征方程**，$r^2＋pr＋q＝0$<br>Δ>0时，解为$r_1，r_2$<br>$y＝C_1e^{r_1x}＋C_2e^{r_2x}$<br>Δ>0时，解为$r$<br>$y＝C_1e^{rx}＋C_2e^{rx}$ |
+| 二阶线性常系数（齐次）<br>$y''＋py'＋qy＝0$ | **构造特征方程**，$r^2＋pr＋q＝0$<br>Δ>0时，解为$r_1，r_2$<br>$y＝C_1e^{r_1x}＋C_2e^{r_2x}$<br>Δ=0时，解为$r$<br>$y＝C_1e^{rx}＋C_2e^{rx}$ |
 | 二阶线性常系数（非齐次）$y''＋py'＋qy＝f(x)$ | 齐次解+特解                                                                                                              |
 
 ---
@@ -528,19 +588,6 @@ $1+\cot^2a=\csc^2a$
 
 ---
 
-## 格林公式
-
-        **概念**：牛顿莱布尼茨公式的推广，学会转二重积分
-
-$$
-\oint Pdx+Qdy
-=\iint_D\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y}dxdy
-$$
-
-助记：偏导另一变量，后减前
-
----
-
 ## 形心质心公式
 
         **形心**：是几何形状的中心，在对称轴交点上
@@ -570,3 +617,34 @@ y_0=\frac{\iint_Dy\rho(x,y) d\sigma}{\iint_D\rho(x,y) d\sigma}
 $$
 
 ---
+
+## 向量旋度公式
+
+向量$A(x,y,z)=Pi+Qj+Rk$的旋度，$P、Q、R$为函数可偏导，则有$A$的旋度为
+
+$$
+rotA=
+\left |
+\begin{array}{cccc}
+i & j & k\\
+\frac{\partial P}{\partial x} &
+\frac{\partial Q}{\partial y} &
+\frac{\partial R}{\partial z}\\
+P & Q & R
+\end{array}
+\right |
+$$
+
+---
+
+## 方向导数公式
+
+ 函数为$f(x,y,z)$，在点$(a,b,c)$，沿着向量$n(i,j,k)$方向导数为：
+
+$$
+f_x'\cos\alpha +f_y'\cos\beta +f_z'\cos\gamma\\
+其中，\cos\alpha=\frac{i}{\|n\|}，
+\cos\beta=\frac{j}{\|n\|}，
+\cos\gamma=\frac{k}{\|n\|}\\
+f_x'、f_y'、f_z'导数是点(a,b,c)的导数
+$$
