--- a/pages/M04概率论与数理统计.md
+++ b/pages/M04概率论与数理统计.md
@@ -1,6 +1,6 @@
 <h1 align="center">概率论与数理统计</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2023-08-12</div>
 
 ## 概率基础
 
@@ -186,7 +186,13 @@
 
 + 指数分布具有无记忆性，增长很快：$P\{X>b\vert X>a\}＝P\{X>b\}$
 
-+ $X$符合正太分布，间记$X-N(\mu,\sigma^2)$，$N(0,1)$是标准正太分布
++ $X$符合正太分布，间记$X-N(\mu,\sigma^2)$，其中$\mu$为期望和对称轴的位置，$\sigma$为方差，越小分布越集中，图形越陡峭。
+  
+  | 3σ原则       | $(\mu-\sigma,\mu+\sigma)$ | $(\mu-2\sigma,\mu+2\sigma)$ | $(\mu-3\sigma,\mu+3\sigma)$ |
+  |:----------:|:-------------------------:|:---------------------------:|:---------------------------:|
+  | 恒定P（标准化证明） | 0.6826                    | 0.9544                      | 0.9973                      |
+
++ $N(0,1)$是标准正太分布
 
 | 正太分布$f(x)$性质                                                  |
 |:-------------------------------------------------------------:|
@@ -305,7 +311,8 @@ $$
 
 $$
 f(x\vert y)＝f_X(x)＝\frac{f(x,y)}{f_Y(y)}\\
-得到f(x,y)=f_X(x)f_Y(y)
+得到f(x,y)=f_X(x)f_Y(y)\\
+F(x,y)=F_X(x)F_Y(y)
 $$
 
 ---
@@ -351,7 +358,10 @@ $$
 
         性质：若$X-N(μ_1,σ_1^2)$，$Y-N(μ_2,σ_2^2)$独立，则
 
-                        $X＋Y-N(μ_1＋μ_2,σ_1^2＋σ_2^2)$
+$$
+X＋Y-N(μ_1＋μ_2,σ_1^2＋σ_2^2)\\
+X-Y-N(μ_1-μ_2,σ_1^2＋σ_2^2)
+$$
 
 ---
 
@@ -423,7 +433,7 @@ $$
         **概念**：描述X与Y的某种联系，不受单位影响：
 
 $$
-ρ=Cov(X^*,Y^*)=[(\frac {X-EX}{\sqrt{DX}})(\frac {Y-EY}{\sqrt{DY}})]=
+ρ=Cov(X^*,Y^*)=E[(\frac {X-EX}{\sqrt{DX}})(\frac {Y-EY}{\sqrt{DY}})]=
 \frac{Cov(X,Y)}{\sqrt{DXDY}}
 $$
 
