数学笔记0908修正

--- a/pages/M01线性代数.md
+++ b/pages/M01线性代数.md
@@ -1,6 +1,6 @@
 <h1 align="center">线性代数</h1>
 
-<div align="right">最近更新时间：2023-08-10</div>
+<div align="right">最近更新时间：2023-09-08</div>
 
 ## 行列式
 
@@ -339,9 +339,18 @@
 | 行简化阶梯形 | **阶梯型严格版**，每行首非零元是1，首非零元所在列的其余元素都是0            | 非零行个数      | 只行变换      | 求解线性方程                   |
 | 标准形    | **行简化阶梯型严格版**，主对角线开始可有不间断1，其余都0                | 非零行个数，1的个数 | 只行变换/行列变换 | 求逆矩阵                     |
 
-+ **矩阵的秩**：非零子式（其矩阵行列式非零）的最高阶数。记$r(A)$
-  
-          性质：1.$r(A)＝r(A^T)$，2.乘可逆矩阵，秩不变
+---
+
+#### 矩阵的秩
+
+**概念**：非零子式（其矩阵行列式非零）的最高阶数。记$r(A)$
+
+| 性质                                                        |
+|:---------------------------------------------------------:|
+| $r(A)＝r(A^T)$                                             |
+| 乘可逆矩阵，秩不变                                                 |
+| 矩阵乘法有：$r(AB)≤min(r(A),r(B))$                              |
+| 分块矩阵有：$r(A \quad B)≥r(A)、r(B \quad A)≥r(B)$，因为化阶梯型求秩是从左往右 |
 
 ---
 
@@ -440,6 +449,35 @@
 
 ---
 
+#### 相似矩阵间的初等变换
+
+       **初等变换法证明**：$P^{-1}AP＝B$
+
+$$
+\left\{
+\begin{array}{c}
+设可逆方阵P=R_1R_2...R_f\\
+P^{-1}=(R_1R_!...R_f)^{-1}=R_f^{-1}...R_2^{-1}R_1^{-1}\\
+P^{-1}AP=(R_f^{-1}...R_2^{-1}R_1^{-1})C(R_1R_2...R_f)=B\\
+EP=E(R_1R_2...R_f)=P
+\end{array}
+\right.
+$$
+
+        **初等变换法过程**：$（\frac{A}{E}）->（\frac{B}{P}）$
+
+1. $A$和$E$一起，**必须只做初等列变换**，然后$A$再相应做一次**对应的行变换**
+
+2. $A$化为$B$，$E$即化为$P$
+
+| 初等列变换                         | 矩阵相似对应的行变换                      |
+|:-----------------------------:|:-------------------------------:|
+| $i、j$两列互换，$A(i,j)$            | $i、j$两行互换，$A(i,j)$              |
+| $i$列乘数$k$，$A(i(k))$           | $i$行乘数$k^{-1}$，$A(i(k^{-1}))$   |
+| $j$列乘数$k$加到$i$列上去，$A(i,j(k))$ | $i$行乘数$-k$加到$j$行上去，$A(j,i(-k))$ |
+
+---
+
 #### 正交矩阵
 
         **概念**：$A$为方阵，$A^TA=AA^T=E$，则A为正交矩阵
@@ -480,9 +518,11 @@ AP=A(\alpha_1\quad\alpha_2\quad...\quad\alpha_n)\\
 =P\wedge\\
 $$
 
-<br>
-
-**对称矩阵一定能对角化，一定有n个线性无关的特征向量**
+| 性质                               |
+|:--------------------------------:|
+| 对角化的**充分必要条件**：n阶方阵具有n个线性无关的特征向量 |
+| 对角化的**充分不必要条件**：n阶方阵具有n个不同特征值    |
+| **对称矩阵**一定能对角化                   |
 
 ---
 
@@ -569,7 +609,6 @@ $$
 | $\alpha_1、\alpha_2...\alpha_n$每个可由$\beta_1、\beta_2...\beta_n$线性表示，则$r(向量组\alpha)≤r(向量组\beta)$ |
 | 两个向量组等价，则两个向量组的秩相等，因为性质1极大无关组与原向量组是等价的，不同极大无关组中间也是等价的                                         |
 | $矩阵行向量组的秩=矩阵列向量组的秩=矩阵的秩$                                                                      |
-| $r(AB)≤min(r(A),r(B))$                                                                        |
 
         **求法**：
 
@@ -743,11 +782,11 @@ $$
 
         **概念**：通过线性替换，使得只有平方项，不需要矩阵标准行全1。
 
-| 方法             |
-|:--------------:|
-| 配方法            |
-| 初等变换法          |
-| 正交替换、特征值法、对角化法 |
+| 方法        | 适用于                                        | 区别\联系                                   |
+|:---------:|:------------------------------------------:|:---------------------------------------:|
+| 配方法       | 求二次型$f(x_1,x_2,x_3)=0$时，$x$的通解，配方后用齐次线性方程组 | $y=C^{-1}x，(C^{-1})^{T}\wedge C^{-1}=A$ |
+| 初等变换法     | 求规范型$\wedge$，$C$无要求                        | $x=Cy，C^TAC=\wedge$                     |
+| 正交替换、特征值法 | 求标准型$\wedge$，$C$需正交化，单位化                   | \                                       |
 
 ---
 
@@ -757,7 +796,7 @@ $$
 
 2. 只有交叉项的，需要弄出平方：$x_1＝y_1-y_2，x_2＝y_1＋y_2，x_3＝y_3，x_4＝y_4$
 
-3. 结果写成：$x＝Cy，f=y^T\wedge y$
+3. 结果写成：$y＝C^{-1}x（矩阵C^{-1}必须可逆，自由未知量y分别取1）$,$f（=x^TAx）=y^T\wedge y=y的方程式$。因为矩阵$C^{-1}$可逆才能满足合同。
 
 ---
 
@@ -785,6 +824,12 @@ $$
 3. 从右到右，依次先消第n行，第n-1行...第1行，消出下三角全0
 
 4. 当$A$变成$\wedge$，$E$就变成$C$，此外若$\wedge$主对角线先按1，-1，0的连续顺序则为**规范形**
+
+| 初等列变换                        | 矩阵合同对应的行变换                   |
+|:----------------------------:|:----------------------------:|
+| $i、j$两列互换，$A(i,j)$           | $i、j$两行互换，$A(i,j)$           |
+| $i$列乘数$k$，$A(i(k))$          | $i$行乘数$k$，$A(i(k))$          |
+| $j$列乘$k$加到$i$列上去，$A(i,j(k))$ | $j$行乘$k$加到$i$行上去，$A(i,j(k))$ |
 
 | 规范形术语 | 说明          |
 |:-----:|:-----------:|
