--- a/pages/M02微积分一.md
+++ b/pages/M02微积分一.md
@@ -1,6 +1,6 @@
 <h1 align="center">微积分一</h1>
 
-<div align="right">最近更新时间：2023-08-12</div>
+<div align="right">最近更新时间：2023-09-08</div>
 
 ## 集合
 
@@ -129,9 +129,10 @@
 | 重要极限 | 说明                                                                             |
 |:----:|:------------------------------------------------------------------------------:|
 | 夹逼准则 | 当$g(x)≤f(x)≤h(x)$，$g(x)$和$h(x)$极限都为$a$，则$f(x)$极限也为$a$，构造$g(x)、h(x)$以求极限        |
-| 自然数  | $\lim_{x \to\infty}(1＋\frac{1}{x})^x＝\lim_{x→0}(1＋x)^{\frac{1}{x}}＝e$，$x$可能是凑的 |
+| 自然数  | $\lim_{x \to\infty}(1＋\frac{1}{x})^x=\lim_{x→0}(1＋x)^{\frac{1}{x}}＝e$，$x$可能是凑的 |
 
 + $连续复利=e^{rt}（r年利率，t为年数）$
++ $\lim_{x \to\infty}(\frac{x+1}{x})^x＝e，\lim_{x \to\infty}(\frac{x}{x+1})^x＝e^{-1}$
 
 ---
 
@@ -169,11 +170,12 @@
 
 ### 无穷小比较
 
-| 无穷小比较                   | 说明                                   |
-|:-----------------------:|:------------------------------------:|
-| $f(x)$是$g(x)$的**高阶无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝0$      |
-| $f(x)$是$g(x)$的**低阶无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝\infty$ |
-| $f(x)$是$g(x$)的**等价无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝1$      |
+| 无穷小比较                   | 说明                                    |
+|:-----------------------:|:-------------------------------------:|
+| $f(x)$是$g(x)$的**高阶无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝0$       |
+| $f(x)$是$g(x)$的**低阶无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝\infty$  |
+| $f(x)$是$g(x$)的**同阶无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝C（C是常数）$ |
+| $f(x)$是$g(x$)的**等价无穷小** | $\lim_{x→0}\frac{f(x)}{g(x)}＝1$       |
 
 | 等价无穷小      | 等价无穷小              |
 |:----------:|:------------------:|
@@ -199,7 +201,7 @@
 
 ### 泰勒展开
 
-        **泰勒公式**：$f(x)$在$x_0$出有n阶导则有：
+        **泰勒公式**：$f(x)$在$x_0$出有$n$阶导则有：
 
 $$
 f(x)=f(x_0)+\frac{f'(x_0)}{1!}(x-x_0)
@@ -208,7 +210,9 @@ f(x)=f(x_0)+\frac{f'(x_0)}{1!}(x-x_0)
 +\frac{f^{(n)}(x_0)}{n!}(x-x_0)^n
 $$
 
-        **麦克劳林公式**：f(x)在0出有n阶导则有：
+在哪有n阶导就可在哪展开，一般都是在0展开，式子简单，运用广。
+
+        **麦克劳林公式**：$f(x)$在$0$出有$n$阶导则有：
 
 $$
 f(x)=f(0)+\frac{f'(0)}{1!}x
@@ -218,6 +222,11 @@ f(x)=f(0)+\frac{f'(0)}{1!}x
 $$
 
         助记：从0开始，几阶导÷几阶乘×距离几次方
+
+| 常见函数麦克劳林展开                                                 | 运用                                                  |
+|:----------------------------------------------------------:|:---------------------------------------------------:|
+| $\cos x=\sum_{n=0}^{\infty}(-1)^n\frac{x^{2n}}{(2n)!}$     | $\cos 1=\sum_{n=0}^{\infty}(-1)^n\frac{1}{(2n)!}$   |
+| $\sin x=\sum_{n=0}^{\infty}(-1)^n\frac{x^{2n+1}}{(2n+1)!}$ | $\sin 1=\sum_{n=0}^{\infty}(-1)^n\frac{1}{(2n+1)!}$ |
 
 ---
 
@@ -393,11 +402,11 @@ $$
 
 #### 不定积分法
 
-| 不定积分法 | 内容                                        | 用于     |
-|:-----:|:-----------------------------------------:|:------:|
-| 凑微分法  | 结合用性质，拿进去$d$里面去，凑不定积分基本公式                 | \      |
-| 换元积分法 | 让$t=\sqrt{x}$带入凑微分,求$x=t^2，dx=2tdt$替换微分结果 | 消根号    |
-| 分部积分法 | 先把变换小的拿到$d$里面去，$\int UdV＝UV-\int VdU$     | 要求的又出现 |
+| 不定积分法 | 内容                                                                                    | 用于        |
+|:-----:|:-------------------------------------------------------------------------------------:|:---------:|
+| 凑微分法  | 结合用性质，拿进去$d$里面去，凑不定积分基本公式                                                             | \         |
+| 换元积分法 | 让$t=\sqrt{x}$带入凑微分,得$x=t^2，dx=2tdt$替换<br>让$t=e^x$带入凑微分,求得$x=\ln t，dx=\frac{1}{t}dt$替换 | 消根号、$e^x$ |
+| 分部积分法 | 先把变换小的拿到$d$里面去，$\int UdV＝UV-\int VdU$                                                 | 要求的又出现    |
 
 + 求导变换大的顺序：**反、对、幂、三、指**，(拿进去要拿变化小的)
 
