--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -1,6 +1,6 @@
 <h1 align="center">微积分二</h1>
 
-<div align="right">最近更新时间：2023-08-12</div>
+<div align="right">最近更新时间：2023-09-08</div>
 
 ## 多元函数
 
@@ -123,6 +123,53 @@ $$
 
 ---
 
+### 多元复合偏导
+
+例：有$y=f(u,v)，u=g(x)，v=t(x)$，具体示意图如下：
+
+<img src="./images/2023-08-13-21-20-image.png">
+
+**一阶导**
+
+$$
+\frac{\partial y}{\partial x}=
+\frac{\partial y}{\partial u}×
+\frac{\partial u}{\partial x}+
+\frac{\partial y}{\partial v}×
+\frac{\partial v}{\partial x}
+$$
+
+- 每路复合偏导结果相加
+
+**二阶导**
+
+$$
+\begin{align*}
+\frac{\partial ^2y}{\partial x^2}
+=&(\frac{\partial y}{\partial u}×
+\frac{\partial u}{\partial x}+
+\frac{\partial y}{\partial v}×
+\frac{\partial v}{\partial x})'\\
+=&(\frac{\partial^2 y}{\partial u^2}×\frac{\partial u}{\partial x}×
+\frac{\partial u}{\partial x})+
+(\frac{\partial y}{\partial u}×\frac{\partial^2 u}{\partial x^2})+
+(\frac{\partial^2 y}{\partial v^2}×\frac{\partial v}{\partial x}×
+\frac{\partial v}{\partial x})+
+(\frac{\partial y}{\partial v}×\frac{\partial^2 v}{\partial x^2})
+\end{align*}
+$$
+
+- **到谁偏导的路径，仍然其到谁加后续**，如下：
+  
+  $$
+  \frac{\partial y}{\partial u}\to u \to x，
+\frac{\partial y}{\partial v}\to v \to x，
+\frac{\partial u}{\partial x}\to x，
+\frac{\partial v}{\partial x}\to x
+  $$
+
+---
+
 ## 全微分
 
         **概念**：函数$Z＝f(x,y)$中，$x_0$，$y_0$领域有定义，$Δx≠0，Δx＋x_0∈x_0领域$，$Δy≠0，Δy＋y_0∈y_0领域$，那么在($x_0$,$y_0$)处有：
@@ -143,10 +190,10 @@ $$
         **概念**：函数$Z＝f(x,y)$中，
 
 $$
-\lim_{d→0}\sum f(x,y)Δσ＝\iint_Df(x,y)d\sigma ＝\iint_D f(x,y)dxdy
+\lim_{ΔS_i\to0}\sum f(x,y)ΔS_i＝\iint_Df(x,y)d\sigma ＝\iint_D f(x,y)dxdy
 $$
 
-        **意义**：求体积
+        **意义**：其中，$ΔS_i$为函数$Z$在$xoy$平面上投影$D$划分的无数个非常小的底面积，$f(x,y)$为高度，因此底面积×高就是**求体积**。
 
 | 性质                                                              |
 |:---------------------------------------------------------------:|
@@ -175,20 +222,20 @@ $$
 \int_{关于y左函数}^{关于y右函数}f(x,y)dx
 $$
 
-| 性质                                                                                    |
-|:-------------------------------------------------------------------------------------:|
-| $f(x,y)＝g(x)h(y)$可分则提外：$\int_a^bdx\int_c^dg(x)h(y)dy＝\int_a^bg(x)dx × \int_c^dh(y)dy$ |
-| X型积分和Y型积分的复杂程度不一样，X型积分和Y型积分有时候有一个不能积分                                                 |
-| $\iint_D1dxdy＝S_D$，三重积分同理$\iiint_\Omega 1dxdydz＝V_\Omega$                             |
+| 性质                                    |
+|:-------------------------------------:|
+| 积不相关的变量，可当常量往前提                       |
+| X型积分和Y型积分的复杂程度不一样，X型积分和Y型积分有时候有一个不能积分 |
+| $\iint_D1dxdy＝S_D$                    |
 
 ---
 
 ### 极坐标系\换元法
 
-| 极坐标      | 说明                    | 取值范围          |
-|:--------:|:---------------------:|:-------------:|
-| r        | 从原点出发的射线长度            | $[0,+\infty)$ |
-| $\theta$ | 射线从$x$轴方向**逆时针**旋转的度数 | $[0,2π]$      |
+| 极坐标      | 说明              | 取值范围          |
+|:--------:|:---------------:|:-------------:|
+| r        | 从原点出发的射线长度      | $[0,+\infty)$ |
+| $\theta$ | 射线从$x$轴向y轴旋转的度数 | $[0,2π]$      |
 
 **例1——原点圆**：$D$为：$x^2＋y^2＝4$，求$\iint_{D} f(x,y)dxdy$
 
@@ -216,15 +263,16 @@ $$
 
 3. $D$**对应为**：$r^2=4，即半径为2的圆$
    
-   $f(x,y)$**对应为**：$f(r\cos\theta，r\sin\theta)J(r,\theta)=f(r\cos\theta，r\sin\theta)r$
+   被积$f(x,y)$**对应为**：$f(r\cos\theta，r\sin\theta)J(r,\theta)=f(r\cos\theta，r\sin\theta)r$
 
 $$
-\iint_Df(x,y)dxdy=
+\begin{align*}
+\iint_Df(x,y)dxdy=&
 \iint_{角度起}^{角度终}d\theta
-\iint_{长度起}^{长度终}f(r\cos\theta，r\sin\theta)rdr
-\\↓\\
-=\iint_{0}^{2π}d\theta
+\iint_{长度起}^{长度终}f(r\cos\theta，r\sin\theta)rdr\\
+=&\iint_{0}^{2π}d\theta
 \iint_{0}^{2}f(r\cos\theta，r\sin\theta)rdr
+\end{align*}
 $$
 
 + 极坐标系只有**角度型积分**
@@ -257,9 +305,9 @@ $$
 
 3. $D$**对应为**：$u^2+v^2=4$
    
-   $f(x,y)$**对应为**：$f(u+1,v+2)×1$
+   被积$f(x,y)$**对应为**：$f(u+1,v+2)×1$
 
-4. 再换元转极坐标，略
+4. **再换元转极坐标**：略
 
 ---
 
@@ -289,9 +337,267 @@ b\sin\theta  &  br\cos\theta\\
 
 3. $D$**对应为**：$r^2=1，即半径为1的圆$
    
-   $f(x,y)$**对应为**：$f(ar\cos\theta,br\sin\theta)×abr$
+   被积$f(x,y)$**对应为**：$f(ar\cos\theta,br\sin\theta)×abr$
+
+---
+
+## 三重积分
+
+        **概念**：函数$Z=f(x,y)$中，其对应的密度函数$Q=g(x,y,z)$
+
+$$
+\lim_{ΔV_i\to 0}\sum g(x,y,z)ΔV_i＝
+\iiint_\Omega g(x,y,z)dV＝
+\iiint_\Omega g(x,y)dxdydz
+$$
+
+        **意义**：其中，$ΔV_i$为函数$Z$对应空间$\Omega$划分的无数个非常小的体积，$g(x,y,z)$为对应密度，因此体积×密度就是**求质量**。
+
+---
+
+### 直接坐标系
+
+**先一后二投影法**：如XOY投影型可得到投影面$D_{xy}$，由投影面$D_{xy}$逆方向发射激光，以其通过两点所在的面为$dz$的下限和上限，然后$dxdy$再依据投影面$D_{xy}$和二重积分确定上下限。
+
+        **XOY投影型+二重积分X型**：
+
+$$
+\begin{align*}
+& \iiint_\Omega g(x,y,z)dxdydz \\
+=& \iint_{Dxy}dxdy\int_{z=含x,y的下限}^{z=含x,y的上限}g(x,y,z)dz\\
+=& \int_{x下限}^{x上限}dx
+\int_{y=含x的下限}^{y=含x的上限}dy
+\int_{z=含x,y的下限}^{z=含x,y的上限}g(x,y,z)dz
+\end{align*}
+$$
+
+        **XOY投影型+二重积分Y型**：
+
+$$
+\begin{align*}
+&\iiint_\Omega g(x,y,z)dxdydz\\
+=&\iint_{Dxy}dxdy
+\int_{z=含x,y的下限}^{z=含x,y的上限}g(x,y,z)dz\\
+=&\int_{y下限}^{y上限}dy
+\int_{x=含y的下限}^{x=含y的上限}dx
+\int_{z=含x,y的下限}^{z=含x,y的上限}g(x,y,z)dz
+\end{align*}
+$$
+
+        **YOZ投影型、XOZ投影型**：同理，少用略
+
+| 性质                               |
+|:--------------------------------:|
+| 积不相关的变量，可当常量往前提                  |
+| 该激光必须只能经过2个点，该投影型才能积。            |
+| $\iiint_\Omega 1dxdydz＝V_\Omega$ |
+
+---
+
+**先二后一切割法**：如Z切割型直接确定Z的积分上下限范围，上下限都是常数，而后半部分先积分的二重积分是对应为一个个不同切割面。
+
+        **Z切割型**：
+
+$$
+\begin{align*}
+& \iiint_\Omega g(x,y,z)dxdydz \\
+=& \int_{z下限}^{z上限}dz\iint_Dg(x,y,z)dxdy\\
+&若g(x,y,z)仅包含z，则可以用面积公式直接求解\\
+=& \int_{z下限}^{z上限}g(x,y,z)dz\iint_D1dxdy\\
+=& S_D\int_{z下限}^{z上限}g(x,y,z)dz\\
+\end{align*}
+$$
+
+---
+
+### 极坐标系\换元法
+
+| 极坐标      | 说明              | 取值范围          |
+|:--------:|:---------------:|:-------------:|
+| r        | 从原点出发的射线长度      | $[0,+\infty)$ |
+| $\phi$   | 射线与$z$轴的夹角      | $[0,π]$       |
+| $\theta$ | 射线从$x$轴向y轴旋转的度数 | $[0,2π]$      |
+
++ $r=4$时为球面、$\theta=4$时为半平面，$\phi=4$时为圆锥面
+
+**例1：柱面坐标，圆柱面**：$\Omega$为：$x^2＋y^2＝z，z≤4$，求$\iiint_{\Omega} g(x,y,z)dxdydz$
+
+1. **换元**：$x=r\cos\theta，y=r\sin\theta，z=z$
+
+2. **三阶雅可比行列式**：
+
+$$
+J(r,\theta,z)=
+\left\vert
+\begin{array}{cccc} 
+\frac{\partial x}{\partial r}
+&\frac{\partial x}{\partial \theta}
+&\frac{\partial x}{\partial z}
+\\
+\\
+\frac{\partial y}{\partial r}
+&\frac{\partial y}{\partial \theta}
+&\frac{\partial y}{\partial z}
+\\ 
+\\
+\frac{\partial z}{\partial r}
+&\frac{\partial z}{\partial \theta}
+&\frac{\partial z}{\partial z}
+\end{array}
+\right\vert=
+\left\vert
+\begin{array}{cccc} 
+\cos\theta  &  -r\sin\theta  &  0
+\\
+\\
+\sin\theta  &  r\cos\theta  &  0
+\\
+\\0  &  0  &  1
+\end{array}
+\right\vert=r
+$$
+
+3. $\Omega$**对应为**：$r^2=z，z≤4$
    
-   后略
+   被积$g(x,y,z)$**对应为**：$g(r,\theta,z)J(r,\theta,z)=g(r,\theta,z)r$
+
+$$
+\begin{align*}
+&\iiint_{\Omega} g(x,y,z)dxdydz\\
+=&\iiint_{\Omega} g(x,y,z)rdrd\theta dz\\
+运用XOY投影型=&\iint_{Dxy}drd\theta\int_{r^2}^4g(z,y,z)dz\\
+=&\int_{0}^{2\pi}\int_0^2drd\theta\int_{r^2}^4g(z,y,z)dz
+\end{align*}
+$$
+
+---
+
+**例2：柱面坐标，椭圆柱面**：$\Omega$为：$\frac{x^2}{a^2}＋\frac{y^2}{b^2}＝z，z≤4$，求$\iiint_{\Omega} g(x,y,z)dxdydz$
+
+1. **换元**：$x=ar\cos\theta，y=br\sin\theta，z=0$
+
+2. **三阶雅可比行列式**：
+   
+   $$
+   J(r,\theta,z)=
+\left\vert
+\begin{array}{cccc} 
+\frac{\partial x}{\partial r}
+&\frac{\partial x}{\partial \theta}
+&\frac{\partial x}{\partial z}
+\\
+\\
+\frac{\partial y}{\partial r}
+&\frac{\partial y}{\partial \theta}
+&\frac{\partial y}{\partial z}
+\\ 
+\\
+\frac{\partial z}{\partial r}
+&\frac{\partial z}{\partial \theta}
+&\frac{\partial z}{\partial z}
+\end{array}
+\right\vert=
+\left\vert
+\begin{array}{cccc} 
+a\cos\theta  &  -ar\sin\theta  &  0
+\\
+\\
+b\sin\theta  &  br\cos\theta  &  0
+\\
+\\0  &  0  &  1
+\end{array}
+\right\vert=abr
+   $$
+
+3. $\Omega$**对应为**：$r^2=z，z≤4$
+   
+   被积$g(x,y,z)$**对应为**：$g(r,\theta,z)J(r,\theta,z)=g(r,\theta,z)abr$
+
+---
+
+**例3：球面坐标**：$\Omega为：x^2＋y^2+z^2=4，求\iiint_{\Omega} g(x,y,z)dxdydz$
+
+1. **换元**：$x=r\sin\phi\cos\theta，y=r\sin\phi\sin\theta，z=r\cos\phi$
+
+2. **三阶雅可比行列式**：
+   
+   $$
+   J(r,\phi,\theta)=
+\left\vert
+\begin{array}{cccc} 
+\frac{\partial x}{\partial r}
+&\frac{\partial x}{\partial \phi}
+&\frac{\partial x}{\partial \theta}
+\\
+\\
+\frac{\partial y}{\partial r}
+&\frac{\partial y}{\partial \phi}
+&\frac{\partial y}{\partial \theta}
+\\ 
+\\
+\frac{\partial z}{\partial r}
+&\frac{\partial z}{\partial \phi}
+&\frac{\partial z}{\partial \theta}
+\end{array}
+\right\vert=
+\left\vert
+\begin{array}{cccc} 
+\sin\phi\cos\theta  &  r\cos\phi\cos\theta  &  -r\sin\phi\sin\theta
+\\
+\\
+\sin\phi\sin\theta  &  r\cos\phi\sin\theta  &  r\sin\phi\cos\theta
+\\
+\\\cos\phi  &  -r\sin\phi  &  0
+\end{array}
+\right\vert=r^2\sin\phi
+   $$
+
+3. $\Omega$**对应为**：$r^2=4$
+   
+   被积$g(x,y,z)$**对应为**：$g(r,\phi,\theta)J(r,\phi,\theta)=g(r,\phi,\theta)r^2\sin\phi$
+
+---
+
+**例4：橄榄球面坐标**：$\Omega为：\frac{x^2}{a^2}＋\frac{y^2}{b^2}+\frac{z^2}{c^2}=4，求\iiint_{\Omega} g(x,y,z)dxdydz$
+
+1. **换元**：$x=ar\sin\phi\cos\theta，y=br\sin\phi\sin\theta，z=cr\cos\phi$
+
+2. **三阶雅可比行列式**：
+   
+   $$
+   J(r,\phi,\theta)=
+\left\vert
+\begin{array}{cccc} 
+\frac{\partial x}{\partial r}
+&\frac{\partial x}{\partial \phi}
+&\frac{\partial x}{\partial \theta}
+\\
+\\
+\frac{\partial y}{\partial r}
+&\frac{\partial y}{\partial \phi}
+&\frac{\partial y}{\partial \theta}
+\\ 
+\\
+\frac{\partial z}{\partial r}
+&\frac{\partial z}{\partial \phi}
+&\frac{\partial z}{\partial \theta}
+\end{array}
+\right\vert=
+\left\vert
+\begin{array}{cccc} 
+a\sin\phi\cos\theta  &  ar\cos\phi\cos\theta  &  -ar\sin\phi\sin\theta
+\\
+\\
+b\sin\phi\sin\theta  &  br\cos\phi\sin\theta  &  br\sin\phi\cos\theta
+\\
+\\c\cos\phi  &  -cr\sin\phi  &  0
+\end{array}
+\right\vert=abcr^2\sin\phi
+   $$
+
+3. $\Omega$**对应为**：$r^2=4$
+   
+   被积$g(x,y,z)$**对应为**：$g(r,\phi,\theta)J(r,\phi,\theta)=g(r,\phi,\theta)abcr^2\sin\phi$
 
 ---
 
@@ -309,12 +615,12 @@ $$
 
 $$
 \oiint_DPdxdy+Qdydz+Rdxdz=\iiint_\Omega
-\frac{\partial P}{\partial z}+
+(\frac{\partial P}{\partial z}+
 \frac{\partial Q}{\partial x}+
-\frac{\partial R}{\partial y}
+\frac{\partial R}{\partial y})dxdydz
 $$
 
-**斯托克斯公式**：若函数$P，Q，R$在**闭平面区间**D上连续，且有一阶偏导，$L$为$D$的**边界曲线**，D的侧与L方向按右手法则，则有**曲线积分<=>曲面积分**
+**斯托克斯公式**：若函数$P，Q，R$在**闭平面区间**D上连续，且有一阶偏导，$L$为$D$的**边界曲线**，D的正法方向量与L的正方向按右手法则，则有**曲线积分<=>曲面积分**
 
 $$
 \oint_L Pdx+Qdy+Rdz
@@ -335,24 +641,6 @@ $$
 
 ---
 
-## 三重积分
-
-**X型**：有以下两种，具体用哪种，以最先积分的上下限表达式方便的为准。
-
-$$
-\int_{x下限}^{x上限}
-\int_{y=含x的下限}^{y=含x的上限}
-\int_{z=含x,y的下限}^{z=含x,y的上限}
-\\或\\
-\int_{x下限}^{x上限}
-\int_{z=含x的下限}^{z=含x的上限}
-\int_{y=含x,z的下限}^{y=含x,z的上限}
-$$
-
-**Y型和Z型**：同理
-
----
-
 ## 总结归纳
 
 ### 主术语
@@ -362,7 +650,8 @@ $$
 | 二元连续  | 纸可揉，不能破洞      | 一笔画        | 一元连续    |
 | 偏导数   | 某方向切线斜率，光滑    | 切线斜率，光滑    | 导数      |
 | 全微分   | 利用全部偏导数，做近似计算 | 利用导数，做近似计算 | 微分      |
-| 二重积分  | 由面，积体积，求体积    | 由线，积面积，求面积 | 积分      |
+| 二重积分  | 由面，积高，求体积     | 由线，积高，求面积  | 积分      |
+| 三重积分  | 由体积，积密度，求质量   | 由线，积高，求面积  | 积分      |
 
 ---
 
@@ -379,15 +668,15 @@ $$
 
 + $\ln$公式：$\ln a-\ln b=\ln\frac ab，\ln a+\ln b=\ln ab$
 
-| 收敛保持运算、性质                    |
-|:----------------------------:|
-| 收敛通项数乘，仍然收敛（同广义积分）           |
-| 收敛通项±收敛通项，仍然收敛 （同广义积分）       |
-| 收敛级数，任加括号仍然收敛。发散级数，任去括号后仍然发散 |
-| 收敛的必要不充分条件是：通项趋于0            |
-| 收敛通项＋发散通项，必发散                |
-| 发散通项＋发散通项，未必发散               |
-| 若\|通信\|收敛，则原通信收敛             |
+| 收敛保持运算、性质                                                            |
+|:--------------------------------------------------------------------:|
+| 收敛通项数乘，仍然收敛（同广义积分）                                                   |
+| 收敛通项±收敛通项，仍然收敛 （同广义积分）                                               |
+| 收敛级数，任加括号仍然收敛。发散级数，任去括号后仍然发散                                         |
+| 收敛的必要不充分条件是：通项趋于0，有$\lim_{n\to\infty}通项_n=\lim_{n\to\infty}通项_{n+1}$ |
+| 收敛通项＋发散通项，必发散                                                        |
+| 发散通项＋发散通项，未必发散                                                       |
+| 若\|通项\|收敛，则原通项收敛                                                     |
 
 ---
 
@@ -410,9 +699,9 @@ $$
 
         **概念**：通项正负交替出现
 
-| 判断方法 | 说明                       |
-|:----:|:------------------------:|
-| 莱布尼茨 | 通项趋于0，且$a_n≥a_{n+1}$，则收敛 |
+| 判断方法 | 说明                              |
+|:----:|:-------------------------------:|
+| 莱布尼茨 | 通项趋于0，且$a_n≥a_{n+1}$即级数单调不增，则收敛 |
 
 + $a_n$与$a_{n+1}$比较的三种方法：相减、相除、求导
 
@@ -432,16 +721,18 @@ $$
         **判别方法**：全部取绝对值，然后用比值判别法
 
 $$
-\lim_{n\to\infty}\vert\frac{u_{n+1}}{u_n}\vert
+\begin{align*}
+&\lim_{n\to\infty}\vert\frac{u_{n+1}}{u_n}\vert
 =\lim_{n\to\infty}\vert\frac{a_{n+1}}{a_n}x\vert=L\\
-因为L<1收敛，有如下情况：\\
-①若\vert\frac{a_{n+1}}{a_n}\vert=0，
+&因为L<1收敛，有如下情况：\\
+&①若\vert\frac{a_{n+1}}{a_n}\vert=0，
 x∈(-\infty,+\infty)，x收敛半径+\infty\\
-②若\vert\frac{a_{n+1}}{a_n}\vert=Q∈(0，+\infty)，
+&②若\vert\frac{a_{n+1}}{a_n}\vert=Q∈(0，+\infty)，
 x∈(-\frac{1}{Q},\frac{1}{Q}),x收敛半径\frac{1}{Q}\\
-③若\vert\frac{a_{n+1}}{a_n}\vert=+\infty，
+&③若\vert\frac{a_{n+1}}{a_n}\vert=+\infty，
 x=0，x收敛半径0\\
-最后，单独判断L=1的情况
+&最后，单独判断L=1的情况
+\end{align*}
 $$
 
 | 性质                       |
@@ -502,8 +793,8 @@ $$
 
 | 分类                       | 说明                                                 |
 |:------------------------:|:--------------------------------------------------:|
-| 可分离$y'$的                 | 直接求不定积分得$y$                                        |
-| 换元再分离                    | ？                                                  |
+| 可分离$y'$的，等式右边不包含$y$      | 直接求不定积分得$y$                                        |
+| 令$y'=\frac{dy}{dx}$      | 化为$f(x)dx=f(y)dy$，两边同时积分                           |
 | 一阶线性（齐次）$y'＋p(x)y＝0$     | $y＝Ce^{-\int p(x)dx}$                              |
 | 一阶线性（非齐次）$y'＋p(x)y＝q(x)$ | $y＝(\int q(x)e^{\int p(x)dx}dx＋C)e^{-\int p(x)dx}$ |
 
@@ -538,11 +829,11 @@ $$
 
         对应的三元方程：$f(x,y,z)=0=z-g(x,y)$
 
-        用三元方程求点的法向量：$(f_x'，f_y'，f_z')$
+        用三元方程求点的**法向量**：$(f_x'，f_y'，f_z')$
 
-        用三元方程求点的切平面公式：$f_x'(x-x_0)＋f_y'(y-y_0)＋f_z'(z-z_0)＝0$
+        用三元方程求过**切点**$(x_0,y_0)$**切平面**：$f_x'(x-x_0)＋f_y'(y-y_0)＋f_z'(z-z_0)＝0$
 
-        用三元方程求法线方程：$\frac{x-x_0}{f_x'}=\frac{y-y_0}{f_y'}=\frac{z-z_0}{f_z'}$
+        用三元方程求过**切点**$(x_0,y_0)$**法线**：$\frac{x-x_0}{f_x'}=\frac{y-y_0}{f_y'}=\frac{z-z_0}{f_z'}$
 
 ---
 
@@ -618,21 +909,32 @@ $$
 
 ---
 
-## 向量旋度公式
+## 向量旋度、散度公式
 
-向量$A(x,y,z)=Pi+Qj+Rk$的旋度，$P、Q、R$为函数可偏导，则有$A$的旋度为
+向量$A(x,y,z)=Pi+Qj+Rk$，其中$P、Q、R$为函数可偏导，则有$A$的**旋度**为
 
 $$
 rotA=
 \left |
 \begin{array}{cccc}
 i & j & k\\
-\frac{\partial P}{\partial x} &
-\frac{\partial Q}{\partial y} &
-\frac{\partial R}{\partial z}\\
+\frac{\partial }{\partial x} &
+\frac{\partial }{\partial y} &
+\frac{\partial }{\partial z}\\
 P & Q & R
 \end{array}
-\right |
+\right |=
+(\frac{\partial R}{\partial y}-\frac{\partial Q}{\partial z})i-
+(\frac{\partial R}{\partial x}-\frac{\partial P}{\partial z})j+
+(\frac{\partial Q}{\partial x}-\frac{\partial P}{\partial y})k
+$$
+
++ 代数余子式按第一行展开
+
+向量$A$的**散度**为
+
+$$
+divA=\frac{\partial P}{\partial x}+\frac{\partial Q}{\partial y}+\frac{\partial R}{\partial z}
 $$
 
 ---
