--- a/pages/M04概率论与数理统计.md
+++ b/pages/M04概率论与数理统计.md
@@ -1,6 +1,6 @@
 <h1 align="center">概率论与数理统计</h1>
 
-<div align="right">最近更新时间：2023-08-12</div>
+<div align="right">最近更新时间：2023-09-08</div>
 
 ## 概率基础
 
@@ -22,13 +22,13 @@
 |:--------:|:------------------------:|:----------------:|
 | 包含       | \                        | $A⊆B$            |
 | 相等       | \                        | $A＝B$            |
-| 同时发生     | $P(AB)$                  | $A∩B$            |
-| 至少有一个发生  | $P(A＋B)$                 | $AUB$            |
-| A发生且B不发生 | $P(A-B)$                 | $A∩\overline B$  |
+| 同时发生     | $P(AB)=乘法公式$             | $A∩B$            |
+| 至少有一个发生  | $P(A＋B)=加法公式$            | $A∪B$            |
+| A发生且B不发生 | $P(A-B)=减法公式$            | $A∩\overline B$  |
 | 互不相容事件   | $P(AB)＝0$                | $A∩B＝Ø$          |
-| 对立事件     | $P(AB)＝0$，且$P(A)+P(B)＝1$ | $A∩B＝Ø$，且$AUB＝Ω$ |
+| 对立事件     | $P(AB)＝0$，且$P(A)+P(B)＝1$ | $A∩B＝Ø$，且$A∪B＝Ω$ |
 | 完备事件组    | \                        | 所有事件两两互不相容＝Ω     |
-| 事件独立     | \                        | 互不影响，无关的事件       |
+| 事件独立     | $P(AB)=P(A)P(B)$         | 互不影响，无关的事件       |
 
 + 对立事件只有两个事件，完备事件组可以说可不止两个事情，都互相鼎立。
 
@@ -171,16 +171,16 @@
 
 ### 常见分布
 
-| 常见分布  | 类型  | 概念                                                                  | 概率，分布函数                                      | 期望              | 方差                   |
-|:-----:|:---:|:-------------------------------------------------------------------:|:--------------------------------------------:|:---------------:|:--------------------:|
-| 0-1分布 | 离散  | 试验只有2结果，只做一次，k=1成功，k=0失败                                            | $P\{X＝k\}＝(1-p)^{1-k}p^k$                    | $p$             | $pq$                 |
-| 几何分布  | 离散  | 试验只有2结果，第k次首次发生                                                     | $P\{X＝k\}＝(1-p)^{k-1}p^k$                    | $\frac{1}{p}$   | $\frac{1-p}{p^2}$    |
-| 二项分布  | 离散  | 试验只有2结果，n次试验发生了k次                                                   | $P\{X＝k\}＝C_n^k(1-p)^{n-k}p^k$               | $np$            | $npq$                |
-| 泊松分布  | 离散  | 二项分布n过大拟合，$n≥100$，$λ=np≤10$                                         | $P\{X＝k\}＝\frac{\lambda k}{k!}×e^{-\lambda}$ | $\lambda$       | $\lambda$            |
-| 超几何分布 | 离散  | 总共$N$个分两类(一类$N_1$个/二类$N_2$个)，取n个取到一类有k个                             | $P\{X＝k\}＝(C_{N_1}^kC_{N_2}^{n-k})/C_N^n$    | \               | \                    |
-| 均匀分布  | 连续  | $f(x)＝\frac{1}{b-a}$，$a<x<b$                                        | $F(x)＝\frac{x-a}{b-a}$                       | $\frac{a+b}{2}$ | $\frac{（b-a)^2}{12}$ |
-| 指数分布  | 连续  | $f(x)＝\lambda e^{-\lambda x}$，$\lambda>0,x>0$                       | $F(x)＝1-e^{-\lambda x}$                      | $\frac1\lambda$ | $\frac1{\lambda^2}$  |
-| 正态分布  | 连续  | $f(x)=\frac{1}{\sigma\sqrt {2\pi}}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$ | \                                            | $\mu$           | $\sigma^2$           |
+| 常见分布  | 类型  | 概念                                                                  | 概率/分布函数                                      | 期望              | 方差                   | 表示                |
+|:-----:|:---:|:-------------------------------------------------------------------:|:--------------------------------------------:|:---------------:|:--------------------:|:-----------------:|
+| 0-1分布 | 离散  | 试验只有2结果，只做一次，k=1成功，k=0失败                                            | $P\{X＝k\}＝(1-p)^{1-k}p^k$                    | $p$             | $pq$                 | \                 |
+| 几何分布  | 离散  | 试验只有2结果，第k次首次发生                                                     | $P\{X＝k\}＝(1-p)^{k-1}p^k$                    | $\frac{1}{p}$   | $\frac{1-p}{p^2}$    | \                 |
+| 二项分布  | 离散  | 试验只有2结果，n次试验发生了k次                                                   | $P\{X＝k\}＝C_n^k(1-p)^{n-k}p^k$               | $np$            | $npq$                | $B(n,p)$          |
+| 泊松分布  | 离散  | 二项分布n过大拟合，$n≥100$，$λ=np≤10$                                         | $P\{X＝k\}＝\frac{\lambda k}{k!}×e^{-\lambda}$ | $\lambda$       | $\lambda$            | $P(\lambda)$      |
+| 超几何分布 | 离散  | 总共$N$个分两类(一类$N_1$个/二类$N_2$个)，取n个取到一类有k个                             | $P\{X＝k\}＝(C_{N_1}^kC_{N_2}^{n-k})/C_N^n$    | \               | \                    | \                 |
+| 均匀分布  | 连续  | $f(x)＝\frac{1}{b-a}$，$a<x<b$                                        | $F(x)＝\frac{x-a}{b-a}$                       | $\frac{a+b}{2}$ | $\frac{（b-a)^2}{12}$ | $U(a,b)$          |
+| 指数分布  | 连续  | $f(x)＝\lambda e^{-\lambda x}$，$\lambda>0,x>0$                       | $F(x)＝1-e^{-\lambda x}$                      | $\frac1\lambda$ | $\frac1{\lambda^2}$  | $E(\lambda)$      |
+| 正态分布  | 连续  | $f(x)=\frac{1}{\sigma\sqrt {2\pi}}e^{-\frac{(x-\mu)^2}{2\sigma^2}}$ | \                                            | $\mu$           | $\sigma^2$           | $N(\mu,\sigma^2)$ |
 
 + 超几何分布式是不放回模型，如果N相对于n很大，放不放回对概率几乎没有影响，可看成放回模型的二项分布。
 
@@ -408,6 +408,8 @@ $$
 | 若$X、Y$独立时，$D(X±Y)＝DX＋DY(加减都是加)$                 |
 | $D(X±Y)＝DX＋DY±2Cov(X,Y)$，独立时$Cov(X,Y)＝0$，不独立也可0 |
 
++ **切比雪夫不等式**：$P(\vert X-E(X)≥\epsilon\vert)≤\frac{D(X)}{\epsilon^2}$
+
 ---
 
 ### 协方差
@@ -471,7 +473,7 @@ $$
 
 | 抽样分布 | 表示                                   | EX  | DX   | 性质         |
 |:----:|:------------------------------------:|:---:|:----:|:----------:|
-| 卡方分布 | $\sum^nX^2-~χ^2(n)$                  | $n$ | $2n$ | 卡方相加，自由度相加 |
+| 卡方分布 | $\sum^nX^2-~\chi^2(n)$               | $n$ | $2n$ | 卡方相加，自由度相加 |
 | t分布  | $\frac{X}{\sqrt{Y/n}}-t(n)$          | 0   | 1    | 关于y轴的对称函数  |
 | F分布  | $\frac{Y_1/n_1}{Y_2/n_2}-F(n_1,n_2)$ | \   | \    | F取倒，自由度颠倒  |
 
@@ -536,16 +538,52 @@ $$
 
 ---
 
-### 参数区间估计
+### 区间估计与假设检验
 
-        **概念**：1-α的概率下，估计参数的取值范围
+| 符号             | 意义              |
+|:--------------:|:---------------:|
+| $\mu$          | 总体均值            |
+| $\sigma^2$     | 总体方差            |
+| $X_i$          | 每个样本            |
+| $\overline{X}$ | 样本均值            |
+| $S^2$          | 样本方差（修正）        |
+| $Z$            | $N(0,1)$的标准正太分布 |
+| $\chi^2(n)$    | 卡方分布            |
+| $t(n)$         | t分布             |
+| $F(n_1,n_2)$   | F分布             |
 
-        **置信区间**：某未知参数，落在某分布$[上(1-0.5\alpha)分位数,上0.5\alpha分位数]$的置信区间，概率为1-α
+| 类型   | 待估参数                            | 已知情况                        | 统计量                                                                                                                                                  |
+|:----:|:-------------------------------:|:---------------------------:|:----------------------------------------------------------------------------------------------------------------------------------------------------:|
+| 单总体1 | $\mu$                           | $\sigma^2$已知                | $Z=\frac{\overline X-\mu}{\sigma/\sqrt{n}}$                                                                                                          |
+| 单总体1 | $\mu$                           | $\sigma^2$未知                | $t(n-1)=\frac{\overline X-\mu}{S/\sqrt{n}}$                                                                                                          |
+| 单总体2 | $\sigma^2$                      | $\mu$已知                     | $\chi^2(n)=\frac{1}{\sigma^2}\sum_{i=1}^n(X_i-\mu)^2$                                                                                                |
+| 单总体2 | $\sigma^2$                      | $\mu$未知                     | $\chi^2(n-1)=\frac{(n-1)S^2}{\sigma^2}$                                                                                                              |
+| 双总体1 | $\mu_1-\mu_2$                   | $\sigma_1^2、\sigma_2^2$已知   | $Z=\frac{(\overline X-\overline Y)-(\mu_1-\mu_2)}{\sqrt{\frac{\sigma_1^2}{n_1}+\frac{\sigma_2^2}{n_2}}}$                                             |
+| 双总体1 | $\mu_1-\mu_2$                   | $\sigma_1^2、\sigma_2^2$相等未知 | $t(n_1+n_2-2)=\frac{(\overline X-\overline Y)-(\mu_1-\mu_2)}{\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}×\sqrt{\frac{(n_1-1)S_1^2+(n_2-1)S_2^2}{n_1+n_2-2}}}$ |
+| 双总体2 | $\frac{\sigma_1^2}{\sigma_2^2}$ | $\mu_1、\mu_2$未知             | $F(n_1-1,n_2-1)=\frac{S_1^2/S_2^2}{\sigma_1^2/\sigma_2^2}$                                                                                           |
 
-        **枢轴变量法**：
++ 区间估计的后续：**枢轴变量法**
 
-1. 构造枢轴变量符合某抽样分布，只包含待估计参数是未知参数。
+| 类型   | 原假设                                                                           | 已知情况                        | 统计量                                                                                                                                                  |
+|:----:|:-----------------------------------------------------------------------------:|:---------------------------:|:----------------------------------------------------------------------------------------------------------------------------------------------------:|
+| 单总体1 | $\mu=\overline X$<br>$\mu≥\overline X$<br>$\mu≤\overline X$                   | $\sigma^2$已知                | $Z=\frac{\overline X-\mu}{\sigma/\sqrt{n}}$                                                                                                          |
+| 单总体1 | $\mu=\overline X$<br>$\mu≥\overline X$<br>$\mu≤\overline X$                   | $\sigma^2$未知                | $t(n-1)=\frac{\overline X-\mu}{S/\sqrt{n}}$                                                                                                          |
+| 单总体2 | $\sigma^2=S^2$<br>$\sigma^2≤S^2$<br>$\sigma^2≥S^2$                            | $\mu$已知                     | $\chi^2(n)=\frac{1}{\sigma^2}\sum_{i=1}^n(X_i-\mu)^2$                                                                                                |
+| 单总体2 | $\sigma^2=S^2$<br>$\sigma^2≤S^2$<br>$\sigma^2≥S^2$                            | $\mu$未知                     | $\chi^2(n-1)=\frac{(n-1)S^2}{\sigma^2}$                                                                                                              |
+| 双总体1 | $\mu_1-\mu_2=\epsilon$                                                        | $\sigma_1^2、\sigma_2^2$已知   | $Z=\frac{(\overline X-\overline Y)-(\mu_1-\mu_2)}{\sqrt{\frac{\sigma_1^2}{n_1}+\frac{\sigma_2^2}{n_2}}}$                                             |
+| 双总体1 | $\mu_1-\mu_2=\epsilon$                                                        | $\sigma_1^2、\sigma_2^2$相等未知 | $t(n_1+n_2-2)=\frac{(\overline X-\overline Y)-(\mu_1-\mu_2)}{\sqrt{\frac{1}{n_1}+\frac{1}{n_2}}×\sqrt{\frac{(n_1-1)S_1^2+(n_2-1)S_2^2}{n_1+n_2-2}}}$ |
+| 双总体2 | $\sigma_1^2=\sigma_2^2$<br>$\sigma_1^2≥\sigma_2^2$<br>$\sigma_1^2≤\sigma_2^2$ | $\mu_1、\mu_2$未知             | $F(n_1-1,n_2-1)=S_1^2/S_2^2$                                                                                                                         |
 
-2. 查表得到$-[α/2上分位数的点]<枢轴变量<[α/2上分位数的点]$
++ **假设检验**：单总体中，在对总体进行调整后，根据抽样样本估计的新总体是否与原先总体，在$\mu或\sigma$上有明显不同、明显上升、明显下降等；双总体中，比较两总体的参数是否有明显差异。
+  
+  **步骤**：根据**样本值与检验参数**的比较关系，设置**原假设**、**备择假设**，并确定**拒绝域**。
+  
+  | 求是否明显 | 比较关系     | 原假设 | 备择假设 | 拒绝域 |
+  |:-----:|:--------:|:---:|:----:|:---:|
+  | 上升    | 样本值>检验参数 | <   | >    | 右侧  |
+  | 下降    | 样本值<检验参数 | >   | <    | 左侧  |
+  | 不同    | 样本值≠检验参数 | =   | ≠    | 两侧  |
+  
+  助记：原假设需要往检验参数靠拢、或者说是明显的唱反调
 
-3. 解上述不等式得未知参数的取值范围
+---
